# ReleaseMan

./: README.md  action.yaml
action/: pyproject.toml  requirements.txt
action/src/releaseman/: __init__.py  __main__.py  main.py  report.py  zenodo.py
action/src/releaseman/data/: __init__.py
action/src/releaseman/data/schema/: github-config.yaml  zenodo-config.yaml
docs/: README.md
docs/media/logo/: full.txt
pkg/: MANIFEST.in  pyproject.toml  requirements.txt
pkg/src/releaseman/: __init__.py  dstruct.py  exception.py  file_archiver.py  github.py
